--- a/assets/styles.css
+++ b/assets/styles.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .hero {
-  background: url("img/hero-bg.jpg") no-repeat;
+  background: url("img/hero-bg.webp") no-repeat;
   background-size: cover;
   height: 100vh;
   width: 100vw;
@@ -166,5 +166,4 @@ footer {
   .why-npm {
     height: 100vh;
   }
-
 }
