--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,6 +24,10 @@ h1 {
   font-size: 55px;
 }
 
+.height-100,.height-50{
+  height: max-content;
+}
+
 .btn-primary {
   border-radius: 24px;
   background: #090909;
@@ -107,7 +111,7 @@ h1 {
 
 .highlight-banner p {
   color: #ccc;
-  font-size: 20px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 275;
   line-height: 150%; /* 30px */
@@ -165,5 +169,14 @@ footer {
 @media screen and (min-width: 992px) {
   .why-npm {
     height: 100vh;
+  }
+  .height-100{
+    height: 100%;
+  }
+  .height-50{
+    height: 50%;
+  }
+  .highlight-banner p {
+    font-size: 20px;
   }
 }
