--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,7 +24,8 @@ h1 {
   font-size: 55px;
 }
 
-.height-100,.height-50{
+.height-100,
+.height-50 {
   height: max-content;
 }
 
@@ -151,6 +152,17 @@ footer {
   color: #fff;
 }
 
+.marquee-slider img {
+  height: 50px;
+  filter: grayscale(1);
+  opacity: 0.4;
+}
+
+.marquee-slider img:hover {
+  filter: grayscale(0);
+  opacity: 1;
+}
+
 @media screen and (min-width: 576px) {
   h1 {
     font-size: 90px;
@@ -159,21 +171,24 @@ footer {
     font-size: 96px;
   }
   .highlight-banner h1 {
-    font-size: 80px;
+    font-size: 120px;
   }
   .highlight-banner {
     height: 100vh;
+  }
+  .marquee-slider img {
+    height: 80px;
   }
 }
 
 @media screen and (min-width: 992px) {
   .why-npm {
-    height: 100vh;
+    height: 70vh;
   }
-  .height-100{
+  .height-100 {
     height: 100%;
   }
-  .height-50{
+  .height-50 {
     height: 50%;
   }
   .highlight-banner p {
